[package]
name = "aprs2ws"
version = "0.1.0"
edition = "2024"

[dependencies]
# TODO Point to my github
aprs = { version = "0.1.0", git = "https://github.com/Hugal31/FlightLogR.git" }
#flightlogr = { version = "0.1.0", git = "https://github.com/Hugal31/FlightLogR.git" }
clap = { version = "4.6", features = ["derive"] }
env_logger = "0.11"
futures-util = "0.3"
log = "0.4"
tokio = { version = "1.50", features = ["macros", "net", "rt", "sync", "time"] }
tokio-tungstenite = "0.29"
# tungstenite = "0.29"
